--- a/styles.css
+++ b/styles.css
@@ -4,7 +4,10 @@
 @import url("styles/projects.css");
 @import url("styles/contato.css");
 @import url("styles/rodapé.css");
-
+ 
+*{
+    box-sizing: border-box;
+}
 
 :root {
     --cor-primaria-60: #f2f2f2;
@@ -29,4 +32,5 @@ body {
     font-family: var(--fonte-principal);
     font-size: 16px;
     font-weight: 400;
+    
 }
